fixed my not showing portfolio page

--- a/src/Styles/intro.css
+++ b/src/Styles/intro.css
@@ -8,8 +8,6 @@
   align-items: center;
 }
 
-
-
 .intro__image {
   width: 20rem;
   height: 20rem;
@@ -42,10 +40,6 @@
   display: flex;
 }
 
-.intro__body span {
-  filter: sepia(0);
-}
-
 .intro__text {
   font-family: 'Abril Fatface', cursive;
   line-height: 1.8; 
@@ -56,6 +50,36 @@
   font-size: 2.5rem;
 }
 
+.intro__body a {
+  color: orange;
+  text-decoration: none;
+  position: relative;
+}
+
+.intro__body a:hover {
+  cursor: pointer;
+  color: rgb(240, 156, 0);
+}
+
+.intro__body a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: orange;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.intro__body a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
+
+}
+
 .intro__emojiAnimate {
   animation: waving 1s linear ;
   animation-iteration-count: 2;
@@ -63,6 +87,12 @@
 
 @keyframes waving {
   0% {
+    transform: rotate(-30deg);
+  }
+  10% {
+    transform: rotate(-20deg);
+  }
+  15% {
     transform: rotate(0deg);
   }
   20% {
@@ -71,10 +101,19 @@
   50% {
     transform: rotate(50deg);
   }
-  80% {
+  70% {
     transform: rotate(30deg);
   }
-  100% {
+  80% {
     transform: rotate(0deg);
+  }
+  85% {
+    transform: rotate(-20deg);
+  }
+  95% {
+    transform: rotate(-25deg);
+  }
+  100% {
+    transform: rotate(-30deg);
   }
 }
