--- a/src/Styles/projects.css
+++ b/src/Styles/projects.css
@@ -3,4 +3,5 @@
   height: 100vh;
   width: 100vw;
   background-color: blue;
+  position: absolute;
 }
